--- a/.env
+++ b/.env
@@ -29,5 +29,8 @@ APP_SECRET=7320c07611de20cc8ee6ddf7b3a8d71e
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/weather_app?serverVersion=10.4.13
+DATABASE_URL=mysql://root:@127.0.0.1:3306/weather_app?serverVersion=mariadb-10.4.13
 ###< doctrine/doctrine-bundle ###
+
+## OpenWeatherMap
+OPEN_WEATHER_API_KEY=''
