--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
 .idea
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
